story/NNO-12379 Добавить динамику для атрибутов `<options>`